# libparasail-sys

./: .gitattributes  .gitlab-ci.yml  .gitmodules  CHANGELOG.md  Cargo.toml  README.md  build.rs  wrapper.h
.github/workflows/: test.yml
patches/: fix-int8_t.patch  min-cmake-version.patch
src/: lib.rs
