[package]
name = "libparasail-sys"
version = "0.1.0"
authors = ["Nicolas S. Buitrago <nsb5@rice.edu>"]
links = "parasail"
build = "build.rs"
repository = "gitlab.com/nsbuitrago/libparasail-sys"
documentation = "https://docs.rs/libparasail_sys"
license = "BSD-3-Clause"
description = "Unsafe Rust bindings for the parasail C library"
keywords = ["bioinformatics", "alignment", "parasail", "rust", "ffi"]
edition = "2021"
exclude = ["parasail/apps", "parasail/images", "parasail/tests",
"parasail/travis", "parasail/cmake", "parasail/data", "parasail/util"]

[build-dependencies]
bindgen = "0.69.4"
pkg-config = "0.3.30"

